--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 visual_ext_index.html
 /webapp/visual_ext_index.html
 UIAdaptation_index.html
@@ -6,3 +5,7 @@ changes_preview_index.html
 mock_preview_sapui5.html
 .*/mock_preview_sapui5.html
 sap-ui-cachebuster-info.json
+
+# config
+/.project.json
+/neo-app.json
