1. put css resource into manifest.json 2. naming notations for css class

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -60,9 +60,11 @@
 			}
 		},
 		"resources": {
-			"css": [{
-				"uri": "css/style.css"
-			}]
+			"css": [
+			    {
+				    "uri": "css/homePage.css"
+			    }
+			]
 		},
 		"routing": {
 		    "config": {
