--- a/webapp/neo-app.json
+++ b/webapp/neo-app.json
@@ -1,6 +1,15 @@
 {
 	"welcomeFile": "/index.html",
+	"sendWelcomeFileRedirect": true,
 	"routes": [{
+		"path": "/resources",
+		"target": {
+			"type": "application",
+			"name": "sapui5preview",
+			"entryPath": "/resources"
+		},
+		"description": "SAPUI5 Resources"
+	}, {
 		"path": "/resources",
 		"target": {
 			"type": "service",
@@ -12,11 +21,25 @@
 	}, {
 		"path": "/test-resources",
 		"target": {
+			"type": "application",
+			"name": "sapui5preview",
+			"entryPath": "/test-resources"
+		},
+		"description": "SAPUI5 Test Resources"
+	}, {
+		"path": "/test-resources",
+		"target": {
 			"type": "service",
 			"name": "sapui5",
 			"entryPath": "/test-resources"
 		},
 		"description": "SAPUI5 Test Resources"
+	}, {
+		"path": "/services/userapi",
+		"target": {
+			"type": "service",
+			"name": "userapi"
+		}
 	}],
 	"securityConstraints": [{
 		"permission": "AccessApplicationDescriptor",
