update gitignore (/dist/)

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ changes_preview_index.html
 mock_preview_sapui5.html
 .*/mock_preview_sapui5.html
 sap-ui-cachebuster-info.json
+/dist/
 
 # config
 /.project.json
