add view for custom control uploadCollection

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -118,6 +118,11 @@
 				    "pattern": "ownSession",
 				    "name": "ownSession",
 				    "target": "ownSession"
+				},
+				{
+				    "pattern": "control_uploadCollection",
+				    "name": "control_uploadCollection",
+				    "target": "control_uploadCollection"
 				}
 			],
 			"targets": {
@@ -136,6 +141,11 @@
 				"ownSession": 
 				{
 				    "viewName": "OwnSession"
+				},
+				"control_uploadCollection":
+				{   
+				    "viewPath": "ssms.view.controls",
+				    "viewName": "UploadCollection"
 				}
 			}
 		}
