add view for all controls and set tooltip for header Logo

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -120,6 +120,11 @@
 				    "target": "ownSession"
 				},
 				{
+				    "pattern": "allControls",
+				    "name": "allControls",
+				    "target": "allControls"
+				},
+				{
 				    "pattern": "control_uploadCollection",
 				    "name": "control_uploadCollection",
 				    "target": "control_uploadCollection"
@@ -146,6 +151,11 @@
 				{   
 				    "viewPath": "ssms.view.controls",
 				    "viewName": "UploadCollection"
+				},
+				"allControls":
+				{
+				    "viewPath": "ssms.view.controls",
+				    "viewName": "AllControls"
 				}
 			}
 		}
