fix url for own session

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -207,7 +207,7 @@
 				},
 				"test_ownSession": {
 					"viewPath": "ssms.view.test",
-					"viewName": "OwnSession"
+					"viewName": "OwnedSession"
 				}
 			}
 		}
